# vibecode1

./: Challenge #2 Client Code.py  Challenge #2 Server Code.py  README.md  client.py  index.html  main.py  package-lock.json  package.json  server.py  tsconfig.json  vitest.config.ts
Challenge4/: chathistory.txt  server.py  study_buddy.py
challenge3/src/: App.tsx  engine.test.ts  engine.ts  gameConfig.ts  index.css
project_3_files/: README.md  eco_architecture.md  eco_spec.md  eco_todo.md  pyproject.toml  run.ps1
project_3_files/specs/: citizens.md  metrics.md  prejudices.md  rules.md  scenarios.md  world.md
project_3_files/src/eco/: __init__.py  cli.py
project_3_files/src/eco/config/: loader.py  models.py  scenario.py
project_3_files/src/eco/report/: __init__.py  render_json.py  render_md.py
project_3_files/src/eco/sim/: activities.py  aggregate.py  emissions.py  engine.py
project_3_files/src/eco/util/: errors.py  hashing.py
project_3_files/tests/: test_engine_golden.py  test_loader.py
project_3_files/tests/fixtures/tiny_specs/: citizens.md  expected.json  metrics.md  rules.md  scenarios.md  world.md
project_3_files/tests/fixtures/tiny_specs_alt_rules/: prejudices.md  rules.md
